--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - images/jardin1.jpeg
+     - images/jardin2.jpeg
+     - images/jardin3.jpeg
+     - images/jardin4.jpeg
+     - images/jardin5.jpeg
+     - images/piscine1.jpeg
+     - images/piscine2.jpeg
+     - images/piscine3.jpeg
+     - images/piscine4.jpeg
+     - images/piscine5.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
